# CS536

./: .gitignore  Presentation.ppt  Presentation.pptx  zip_hw1.sh  zip_hw2.sh  zip_hw3.sh  zip_hw4.sh
hw1/: CG_hw1.cpp  CMakeLists.txt  spline0.iv  spline1.iv
hw1/OpenInventorTest/: .cproject  .gitignore  .project  CG_hw1.cpp  CMakeLists.txt  Makefile  OITest.cpp  output.iv
hw2/: CG_hw2.cpp  CMakeLists.txt  HW2_test3.iv  Makefile  README
hw3/: CG_hw3.cpp  CMakeLists.txt  Makefile  flat_shaded_tesselated1.iv  smooth_shaded_tesselated1.iv
jth82_hw1/: CG_hw1.cpp  CMakeLists.txt  Makefile  README  out.iv
jth82_hw2/: CG_hw2  CG_hw2.cpp  HW2_test0.iv  HW2_test0a.iv  HW2_test0b.iv  HW2_test2.iv  HW2_test4.iv  HW2_test5.iv  Makefile  README  cpts_test1.txt  out.iv  out.txt
jth82_hw3/: CG_hw3  CG_hw3.cpp  Makefile  Node.h  README  flat_shaded_tesselated.iv  out.iv
jth82_hw4/: CG_hw4.cpp  CMakeLists.txt  HW4_p0_flat.iv  HW4_p0_smooth.iv  HW4_p1_flat.iv  HW4_p1_smooth.iv  HW4_p2_flat.iv  HW4_p2_smooth.iv  HW4_p3_flat.iv  HW4_p3_smooth.iv  HW4_p4_flat.iv  HW4_p4_smooth.iv  Makefile
jth82_hw5/: CG_hw5.cpp  CMakeLists.txt  HW5_robot.iv  Makefile  Node.cpp  README
